--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-spinners": "^0.6.1"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
